# KiCad-IC-Engine

./: .flake8  .gitignore  .isort.cfg  .pylintrc  Makefile  README.md  main.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: main.yml
src/: __init__.py  api.py  config.py  gui.py  utils.py  version.py
